--- a/package.json
+++ b/package.json
@@ -33,25 +33,28 @@
     "babel-preset-vue-app": "^0.4.0",
     "chalk": "^1.1.3",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.23.1",
     "cross-env": "^2.0.0",
-    "xo": "^0.18.0",
+    "css-loader": "^0.23.1",
     "eslint-config-vue": "latest",
+    "eslint-plugin-html": "^2.0.1",
     "eslint-plugin-vue": "latest",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.9.0",
     "friendly-errors-webpack-plugin": "^1.1.2",
     "html-webpack-plugin": "^2.22.0",
-    "raw-loader": "^0.5.1",
+    "node-sass": "^4.5.2",
     "offline-plugin": "^4.5.3",
     "postcss-loader": "^0.9.1",
     "postcss-nested": "^1.0.0",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.3",
     "style-loader": "^0.13.1",
     "vue-loader": "^11.0.0",
     "vue-template-compiler": "^2.2.0",
     "webpack": "2.2.0",
     "webpack-dev-middleware": "^1.8.1",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack-hot-middleware": "^2.12.2",
+    "xo": "^0.18.0"
   }
 }
